// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The recurrence interval of the failed terraforming biosphere has shortened past the maintenance cycle Atlas-Bridge II was budgeted for. Atlas-Bridge III records a phase shift each time the industrial mirror swarm failure passes through. The industrial mirror swarm failure drifts the baselines Atlas-Bridge II relies on.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Failed terraforming biosphere took shape in the third pulse cycle, the dominant term in every forecast for this system is the failed terraforming biosphere, and the error bars on it keep widening.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod files claims faster than Ninth Ledger Office can contest them, and both sides know the docket is the battlefield. Every neutral broker between Glasshouse Biosafety Compact and Ninth Ledger Office has recused, relocated, or stopped answering. The compact between Ash Meridian Navy and Glasshouse Biosafety Compact has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Everything else in this system is priced against the quarrel between Helion Debt Synod and Ninth Ledger Office.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Brothers of Choir buries its dead facing Carrion Wake's docks. Brothers of Choir wants Vow-Breaker Wake to bleed first. One chair sits at the head of this table, and Brothers of Choir and Pale Saint Pact have stopped pretending they'd share it.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Brothers of Choir wants Carrion Wake broken before the next thaw.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Models fitted to the black-market route beacon lattice five years ago now underpredict its reach by an order of magnitude at Aperture Trust. The amplitude of the black-market route beacon lattice exceeds the operating envelope of Suhail-37 Belt VI. The public festival tied to safe transit windows introduces a measurable perturbation in Suhail-37 Belt VI. Suhail-37 Belt VI Reach's foundation survey on Suhail-37 Belt VI is overdue by two inspection cycles.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Black-market route beacon lattice took shape in the long-baseline era, the black-market route beacon lattice is shifting the operating envelope Aperture Trust was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Repair crews on Veyra-Locke Concession stopped filing overtime; the paperwork lags the moving bleed-node river by weeks. Every mitigation contract Veyra-Locke Concession has written against the tilted crown has lapsed, failed, or been bought out. Each pass of the narrow-AI perception fog costs Veyra-Locke Concession a margin it doesn't have.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Every schedule in this system bends around the moving bleed-node river, and Veyra-Locke Concession bends furthest.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "One chair sits at the head of this table, and Carrion Synod and Salt Wound Cabal have stopped pretending they'd share it. And then, the metric shear damages hulls took the buffer zones first. Tarandus Route-211 Belt IV Freeport 56 is what comes after the buffer zones. The old-timers on Tarandus Route-211 Belt IV can read the flare-amplified bleed season in the hull groans; the young ones are learning fast. The bones of Tarandus Route-211 Belt IV Freeport 56 go down into Tarandus Route-211 Belt IV further than the charts admit. There, What holds Tarandus Route-211 Belt IV Freeport 56 together is not law or loyalty; it is Narrow-AI stabilizer substrate, metered.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Carrion Synod and Salt Wound Cabal broke after the keep was sealed, it wants Salt Wound Cabal broken before the next thaw.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-frontier-cinematic-fracture-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Between Bone Lantern Wake and Long Knife Run the knife is already drawn. Last Ledger Cabal buries its dead facing Widow Star Synod's docks. Red Wake Pact counts Sisters of Synod's ships the way widows count storms. What holds Pipit's Delta II Freeport together is not law or loyalty; it is Illegal Sol-prohibited geometry sample, metered. Pipit's Delta I Watch was built on the promise of Illegal Sol-prohibited geometry sample, and promises out here have interest rates.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Bone Lantern Wake and Long Knife Run broke in the silent decade, Between the two of them the war is already lost; only the funerals remain.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-realistic-astronomy-low-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Watch-Order Working Group has re-baselined its instruments twice this cycle; the debt-fleet anchor graveyard moved both baselines. The narrow-AI perception fog introduces a measurable perturbation in Guniibuu-Apdu Minor VII. The debt-fleet anchor graveyard drifts the baselines Guniibuu-Apdu Minor VII relies on. The environmental envelope of Guniibuu-Apdu Minor VII constrains every expansion plan Guniibuu-Apdu Minor VII - Moon I Hold files.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Debt-fleet anchor graveyard took shape before the catalog was sealed, the debt-fleet anchor graveyard is drifting the baselines on which Watch-Order Working Group was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-crowded: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Yuyu's Field II records a phase shift each time the debt-fleet anchor graveyard passes through. The amplitude of the debt-fleet anchor graveyard exceeds the operating envelope of Yuyu's Field VIII. The Gardener warning beacon introduces a measurable perturbation in Yuyu's Field II.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The dominant term in every forecast for this system is the debt-fleet anchor graveyard, and the error bars on it keep widening.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The recurrence interval of the moving bleed-node river has shortened past the maintenance cycle Intan's Crown Belt IX was budgeted for. The refugee ark parking orbit introduces a measurable perturbation in Intan's Crown V. Structural telemetry from Intan's Crown II shows secular degradation correlated with the moving bleed-node river at high confidence. Intan's Crown Belt IX Station maintains the only continuous instrument record of conditions on Intan's Crown Belt IX.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The dominant term in every forecast for this system is the moving bleed-node river, and the error bars on it keep widening.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Vey Picket-265 Belt I records a phase shift each time the tilted crown passes through. Models fitted to the tilted crown five years ago now underpredict its reach by an order of magnitude at Vey Picket-265 Belt II. Vey Picket-265 Belt II has re-baselined its instruments twice this cycle; the long-period comet storm moved both baselines. Pinchdrive accident scar maintains the only continuous instrument record of conditions on Vey Picket-265 Belt I. Vey Picket-265 Belt I Platform's foundation survey on Vey Picket-265 Belt I is overdue by two inspection cycles.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Tilted crown took shape between the calibration runs, the tilted crown is drifting the baselines on which Vey Picket-265 Belt I was sited.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "The chiral contamination bloom drifts the baselines Arneb Trace-209 IV relies on. The debt-fleet anchor graveyard introduces a measurable perturbation in Arneb Trace-209 IV. Structural telemetry from Arneb Trace-209 IV Station 85 shows secular degradation correlated with the human vestibular/neurological effects at high confidence. Seismic and thermal baselines for Arneb Trace-209 IV are extrapolated from Arneb Trace-209 IV Station 85's single-point coverage.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "The chiral contamination bloom is shifting the operating envelope Arneb Trace-209 IV was calibrated against.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-fracture: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact disputes Orison Route Authority's claim. Red Vane Labor Combine hires from the same ration queue Veyra-Locke Concession polices. The compact between Kestrel Free Compact and Red Vane Labor Combine has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Orison Route Authority broke in the second wave, the two of them can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-high: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Sepulcher Archive Court and Veyra-Locke Concession both want Sagarmatha Beacon-888 I. Arbitration between Orison Route Authority and Veyra-Locke Concession is still scheduled, quarterly, in a hall neither attends. Ninth Ledger Office refuses to recognize Pale Choir Communion's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "Ask at any dock who runs this system and you'll get two answers — Sepulcher Archive Court or Veyra-Locke Concession — depending on who's in earshot.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-low: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Repair crews on Glasshouse Biosafety Compact stopped filing overtime; the paperwork lags the public festival tied to safe transit windows by weeks. Every mitigation contract Glasshouse Biosafety Compact has written against the tilted crown has lapsed, failed, or been bought out. Each pass of the failed Iggygate wake costs Glasshouse Biosafety Compact a margin it doesn't have.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Public festival tied to safe transit windows took shape after the first audit, the public festival tied to safe transit windows is rewriting the constants Glasshouse Biosafety Compact was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Helion Debt Synod refuses to recognize Orison Route Authority's authority. Arbitration between Helion Debt Synod and Sepulcher Archive Court is still scheduled, quarterly, in a hall neither attends. The compact between Helion Debt Synod and Red Vane Labor Combine has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Helion Debt Synod and Orison Route Authority broke during the convoy decade, Ask at any dock who runs this system and you'll get two answers — it or Orison Route Authority — depending on who's in earshot.",
  "spineVisibility": "contested",
}
`;
